WIP: try make test-task.

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "php": "7.1",
         "psr/cache": "^1.0",
         "psr/log": "^1.1",
-        "vlucas/phpdotenv": "^4.1"
+        "vlucas/phpdotenv": "^4.1",
+        "jms/serializer": "^3.4"
     }
 }
